[package]
name = "fox7fog-github-io"
version = "0.1.0"
edition = "2021"
description = "A Rust WebAssembly GitHub Pages site"
repository = "https://github.com/fox7fog/fox7fog.github.io"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
] }