[package]
name = "my-github-page"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = "0.6"
leptos_router = "0.6"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.5"
pulldown-cmark = "0.9"  # Markdown parsing
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console", "Window", "Document", "Element", "HtmlElement", 
  "Storage", "Location", "History", "Event", "KeyboardEvent"
]
